--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>exercice3</title>
   </head>
   <body>
-
-
+    <p>Afficher une boîte de dialogue permettant de saisir son prénom. Afficher dans une boîte de dialogue "Bonjour, " suivi du prénom saisi.</p>
 
     <script src="script.js"></script>
   </body>
